[project]
name = "langgraph-gemini-snippet"
version = "0.11.0"
description = "langgraph-gemini-snippet"
requires-python = ">=3.12"

dependencies = [
    "langgraph>=0.4.5",
    "langgraph-prebuilt>=0.1.8",
    "langgraph-sdk>=0.1.69",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langsmith>=0.3.42",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "tavily-python>=0.7.2",
    "wikipedia>=1.4.0",
    "trustcall>=0.0.39",
    "langgraph-cli[inmem]>=0.2.10",
    "langchain-google-genai>=2.1.4",
]

readme = "README.md"

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-env>=1.1.3"
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch$prerelease"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = ["pyproject.toml:(?i)version",
                 "devops/configuration-release-dev.yaml:(?i)_IMAGE_VERSION",
                 "devops/configuration-release-test.yaml:(?i)_IMAGE_VERSION",
                 "devops/configuration-release-prod.yaml:(?i)_IMAGE_VERSION"
                ]
bump_message = "chore(bump): $current_version → $new_version [skip-ci]"

# https://github.com/nat-n/poethepoet
[tool.poe]
include = "poe.toml"

[tool.pdm]
distribution = false


[dependency-groups]
dev = [
    "commitizen>=3.13.0",
    "poethepoet>=0.24.4",
    "ipykernel>=6.29.5",
    "ruff>=0.11.13",
]
